# scraper_routine

./: .dockerignore  .env.example  docker-compose.yml  pyproject.toml  readme.md
scraper/: data_loader.py  database.py  logger.py  main.py  utils.py
scraper/tests/: dummy_data.py  main_test.py
